--- a/OBRA 1.html
+++ b/OBRA 1.html
@@ -5,114 +5,170 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obra 1</title>
     <style>
-        /* Estilos omitidos para brevedad */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            background-color: #ffffff;
+            color: #000000;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        .container {
+            background: #f9f9f9;
+            padding: 20px;
+            border-radius: 10px;
+            display: inline-block;
+            width: 80%;
+            max-width: 600px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        input {
+            width: 100%;
+            margin: 10px 0;
+            padding: 10px;
+            font-size: 16px;
+            text-align: center;
+            background: #e0e0e0;
+            color: #000;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .resultado {
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+        .historial {
+            margin-top: 20px;
+            text-align: left;
+            background: #f5f5f5;
+            padding: 15px;
+            border-radius: 10px;
+            width: 80%;
+            max-width: 600px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+            max-height: 200px;
+            overflow-y: auto;
+        }
+        button {
+            margin-top: 10px;
+            padding: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            background: #d9d9d9;
+            color: #000;
+            border: none;
+            border-radius: 5px;
+            width: 100%;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        button:hover {
+            background: #cfcfcf;
+        }
+        .eliminar {
+            font-size: 12px;
+            color: red;
+            cursor: pointer;
+            background: none;
+            border: none;
+        }
+        .fecha {
+            font-size: 12px;
+            color: #888;
+            margin-left: 10px;
+        }
     </style>
-</head>
-<body>
-    <div class="container">
-        <h2>Obra 1</h2>
-        <label>Material:</label>
-        <input type="text" id="material" placeholder="Ej: 50,63" onkeypress="agregarValor(event, 'material')">
-        <label>Mano de Obra:</label>
-        <input type="text" id="manoObra" placeholder="Ej: 40,75" onkeypress="agregarValor(event, 'manoObra')">
-        <label>Otros:</label>
-        <input type="text" id="otros" placeholder="Ej: 30,45" onkeypress="agregarValor(event, 'otros')">
-        <div class="resultado">Total: <span id="total">0,00</span> €</div>
-        <button onclick="mostrarHistorial()">Mostrar Historial</button>
-        <button onclick="resetearHistorial()">Resetear</button>
-    </div>
-    <div class="historial" id="historial"></div>
-
-    <script>
-        let totalCentimos = 0;
-        let historial = [];
-
-        // Función para cargar datos desde localStorage
-        function cargarDatos() {
-            const totalGuardado = localStorage.getItem('totalCentimos');
-            const historialGuardado = localStorage.getItem('historial');
-
-            if (totalGuardado !== null) {
-                totalCentimos = parseInt(totalGuardado, 10);
-            }
-
-            if (historialGuardado !== null) {
-                historial = JSON.parse(historialGuardado);
-            }
-        }
-
-        // Función para guardar datos en localStorage
-        function guardarDatos() {
-            localStorage.setItem('totalCentimos', totalCentimos.toString());
-            localStorage.setItem('historial', JSON.stringify(historial));
-        }
-
-        function agregarValor(event, id) {
-            if (event.key === 'Enter') {
-                let input = document.getElementById(id);
-                let valor = input.value.trim().replace(',', '.');
-
-                if (validarEntrada(valor)) {
-                    let centimos = Math.round(parseFloat(valor) * 100);
-                    totalCentimos += centimos;
-                    actualizarTotal();
-
-                    let fecha = new Date().toLocaleString();
-                    historial.push({ descripcion: `${id}: ${valor} €`, centimos: centimos, fecha: fecha });
-
-                    input.value = "";
-                    guardarDatos(); // Guardar datos después de cada modificación
-                } else {
-                    alert("Por favor, ingresa un valor válido (Ej: 55,63 o 40.75)");
-                    input.value = "";
+    <body>
+        <div class="container">
+            <h2>Obra 1</h2>
+            <label>Material:</label>
+            <input type="text" id="material" placeholder="Ej: 50,63" onkeypress="agregarValor(event, 'material')">
+            <label>Mano de Obra:</label>
+            <input type="text" id="manoObra" placeholder="Ej: 40,75" onkeypress="agregarValor(event, 'manoObra')">
+            <label>Otros:</label>
+            <input type="text" id="otros" placeholder="Ej: 30,45" onkeypress="agregarValor(event, 'otros')">
+            <div class="resultado">Total: <span id="total">0,00</span> €</div>
+            <button onclick="mostrarHistorial()">Mostrar Historial</button>
+            <button onclick="resetearHistorial()">Resetear</button>
+        </div>
+        <div class="historial" id="historial"></div>
+        <script>
+            let totalCentimos = 0;
+            let historial = [];
+            function cargarDatos() {
+                const totalGuardado = localStorage.getItem('totalCentimos');
+                const historialGuardado = localStorage.getItem('historial');
+                if (totalGuardado !== null) {
+                    totalCentimos = parseInt(totalGuardado, 10);
+                }
+                if (historialGuardado !== null) {
+                    historial = JSON.parse(historialGuardado);
                 }
             }
-        }
-
-        function validarEntrada(valor) {
-            return !isNaN(valor) && parseFloat(valor) >= 0;
-        }
-
-        function actualizarTotal() {
-            let euros = Math.floor(totalCentimos / 100);
-            let centimos = totalCentimos % 100;
-            document.getElementById('total').textContent = `${euros},${centimos.toString().padStart(2, '0')}`;
-        }
-
-        function mostrarHistorial() {
-            let historialDiv = document.getElementById('historial');
-            historialDiv.innerHTML = historial.map((entry, index) => 
-                `<p>${entry.descripcion} <span class="fecha">(${entry.fecha})</span> 
-                    <button class="eliminar" onclick="eliminarEntrada(${index})">Eliminar</button>
-                </p>`
-            ).join('');
-        }
-
-        function eliminarEntrada(index) {
-            totalCentimos -= historial[index].centimos;
-            historial.splice(index, 1);
-            actualizarTotal();
-            mostrarHistorial();
-            guardarDatos(); // Guardar datos después de cada modificación
-        }
-
-        function resetearHistorial() {
-            if (confirm("¿Estás seguro de que deseas resetear el historial?")) {
-                historial = [];
-                totalCentimos = 0;
-                actualizarTotal();
-                document.getElementById('historial').innerHTML = "";
-                localStorage.removeItem('totalCentimos');
-                localStorage.removeItem('historial');
+            function guardarDatos() {
+                localStorage.setItem('totalCentimos', totalCentimos.toString());
+                localStorage.setItem('historial', JSON.stringify(historial));
             }
-        }
-
-        // Cargar datos al iniciar la página
-        window.onload = function() {
-            cargarDatos();
-            actualizarTotal();
-            mostrarHistorial();
-        }
-    </script>
-</body>
+            function agregarValor(event, id) {
+                if (event.key === 'Enter') {
+                    let input = document.getElementById(id);
+                    let valor = input.value.trim().replace(',', '.');
+                    if (validarEntrada(valor)) {
+                        let centimos = Math.round(parseFloat(valor) * 100);
+                        totalCentimos += centimos;
+                        actualizarTotal();
+                        let fecha = new Date().toLocaleString();
+                        historial.push({ descripcion: `${id}: ${valor} €`, centimos: centimos, fecha: fecha });
+                        input.value = "";
+                        guardarDatos(); // Guardar datos después de cada modificación
+                    } else {
+                        alert("Por favor, ingresa un valor válido (Ej: 55,63 o 40.75)");
+                        input.value = "";
+                    }
+                }
+            }
+            function validarEntrada(valor) {
+                return !isNaN(valor) && parseFloat(valor) >= 0;
+            }
+            function actualizarTotal() {
+                let euros = Math.floor(totalCentimos / 100);
+                let centimos = totalCentimos % 100;
+                document.getElementById('total').textContent = `${euros},${centimos.toString().padStart(2, '0')}`;
+            }
+            function mostrarHistorial() {
+                let historialDiv = document.getElementById('historial');
+                historialDiv.innerHTML = historial.map((entry, index) => 
+                    `<p>${entry.descripcion} <span class="fecha">(${entry.fecha})</span> 
+                    <button class="eliminar" onclick="eliminarEntrada(${index})">Eliminar</button>
+                    </p>`
+                                                      ).join('');
+            }
+            function eliminarEntrada(index) {
+                totalCentimos -= historial[index].centimos;
+                historial.splice(index, 1);
+                actualizarTotal();
+                mostrarHistorial();
+                guardarDatos(); // Guardar datos después de cada modificación
+            }
+            function resetearHistorial() {
+                if (confirm("¿Estás seguro de que deseas resetear el historial?")) {
+                    historial = [];
+                    totalCentimos = 0;
+                    actualizarTotal();
+                    document.getElementById('historial').innerHTML = "";
+                    localStorage.removeItem('totalCentimos');
+                    localStorage.removeItem('historial');
+                }
+            }
+            window.onload = function() {
+                cargarDatos();
+                actualizarTotal();
+                mostrarHistorial();
+            }
+        </script>
+    </body>
 </html>
