--- a/OBRA 1.html
+++ b/OBRA 1.html
@@ -86,11 +86,11 @@
         <div class="container">
             <h2>Obra 1</h2>
             <label>Material:</label>
-            <input type="text" id="material" placeholder="Ej: 50,63" onkeypress="agregarValor(event, 'material')">
+            <input type="text" id="Material" placeholder="Ej: 50,63" onkeypress="agregarValor(event, 'Material')">
             <label>Mano de Obra:</label>
-            <input type="text" id="manoObra" placeholder="Ej: 40,75" onkeypress="agregarValor(event, 'manoObra')">
+            <input type="text" id="Mano de Obra" placeholder="Ej: 40,75" onkeypress="agregarValor(event, 'Mano de Obra')">
             <label>Otros:</label>
-            <input type="text" id="otros" placeholder="Ej: 30,45" onkeypress="agregarValor(event, 'otros')">
+            <input type="text" id="Otros" placeholder="Ej: 30,45" onkeypress="agregarValor(event, 'Otros')">
             <div class="resultado">Total: <span id="total">0,00</span> €</div>
             <button onclick="mostrarHistorial()">Mostrar Historial</button>
             <button onclick="resetearHistorial()">Resetear</button>
